Refactor Subsequences and add tests to it