@@ -1,7 +1,7 @@
 // Tests: Algorithms for subsequences
 package algolib.sequences;
 
-import java.util.Arrays;
+import java.util.Collection;
 import java.util.List;
 import org.assertj.core.api.Assertions;
 import org.assertj.core.data.Offset;
@@ -9,11 +9,73 @@ import org.junit.jupiter.api.Test;
 
 public class SubsequencesTest
 {
+    // region longestIncreasing
+
+    @Test
+    public void longestIncreasing_WhenIncreasing_ThenAllElements()
+    {
+        // given
+        List<Integer> sequence = List.of(1, 3, 5, 7, 9, 11, 13, 15);
+        // when
+        Collection<Integer> result = Subsequences.longestIncreasing(sequence, Integer::compareTo);
+        // then
+        Assertions.assertThat(result).containsExactlyElementsOf(sequence);
+    }
+
+    @Test
+    public void longestIncreasing_WhenDecreasing_ThenLastElementOnly()
+    {
+        // given
+        List<Integer> sequence = List.of(12, 10, 8, 6, 4, 2);
+        // when
+        Collection<Integer> result = Subsequences.longestIncreasing(sequence, Integer::compareTo);
+        // then
+        Assertions.assertThat(result).containsExactly(sequence.get(sequence.size() - 1));
+    }
+
+    @Test
+    public void longestIncreasing_WhenMultipleSubsequences_ThenLeastLexicographically()
+    {
+        // given
+        List<Integer> sequence = List.of(2, 1, 4, 3, 6, 5, 8, 7, 10);
+        // when
+        Collection<Integer> result = Subsequences.longestIncreasing(sequence, Integer::compareTo);
+        // then
+        Assertions.assertThat(result).containsExactly(1, 3, 5, 7, 10);
+    }
+
+    @Test
+    public void longestIncreasing_WhenIncreasingAndReversedComparator_ThenLastElementOnly()
+    {
+        // given
+        List<Integer> sequence = List.of(1, 3, 5, 7, 9, 11, 13, 15);
+        // when
+        Collection<Integer> result =
+                Subsequences.longestIncreasing(sequence, (i1, i2) -> i2.compareTo(i1));
+        // then
+        Assertions.assertThat(result).containsExactly(sequence.get(sequence.size() - 1));
+    }
+
+    @Test
+    public void longestIncreasing_WhenDecreasingAndReversedComparator_ThenAllElements()
+    {
+        // given
+        List<Integer> sequence = List.of(12, 10, 8, 6, 4, 2);
+        // when
+        Collection<Integer> result =
+                Subsequences.longestIncreasing(sequence, (i1, i2) -> i2.compareTo(i1));
+        // then
+        Assertions.assertThat(result).containsExactlyElementsOf(sequence);
+    }
+
+    // endregion
+    // region maximumSubarray
+
     @Test
     public void maximumSubarray1()
     {
         // given
-        List<Double> sequence = Arrays.asList(3.5, 4.8, -1.6, 7.7, 2.1, -9.3, 0.8);
+        List<Double> sequence = List.of(3.5, 4.8, -1.6, 7.7, 2.1, -9.3, 0.8);
         // when
         List<Double> result = Subsequences.maximumSubarray(sequence);
         // then
@@ -24,7 +86,7 @@ public class SubsequencesTest
     public void maximumSubarray2()
     {
         // given
-        List<Double> sequence = Arrays.asList(-9.3, -1.2, 3.5, 4.8, -10.6, 7.7, 2.1, 0.8, 4.0);
+        List<Double> sequence = List.of(-9.3, -1.2, 3.5, 4.8, -10.6, 7.7, 2.1, 0.8, 4.0);
         // when
         List<Double> result = Subsequences.maximumSubarray(sequence);
         // then
@@ -32,21 +94,24 @@ public class SubsequencesTest
     }
 
     @Test
-    public void maximumSubarray_WhenAllElementsAreNegative()
+    public void maximumSubarray_WhenAllElementsAreNegative_ThenEmpty()
     {
         // given
-        List<Double> sequence = Arrays.asList(-9.0, -2.4, -3.07, -1.93, -12.67);
+        List<Double> sequence = List.of(-9.0, -2.4, -3.07, -1.93, -12.67);
         // when
         List<Double> result = Subsequences.maximumSubarray(sequence);
         // then
         Assertions.assertThat(result).isEmpty();
     }
 
+    // endregion
+    // region maximalSubsum
+
     @Test
     public void maximalSubsum1()
     {
         // given
-        List<Double> sequence = Arrays.asList(3.5, 4.8, -1.6, 7.7, 2.1, -9.3, 0.8);
+        List<Double> sequence = List.of(3.5, 4.8, -1.6, 7.7, 2.1, -9.3, 0.8);
         // when
         double result = Subsequences.maximalSubsum(sequence);
         // then
@@ -57,7 +122,7 @@ public class SubsequencesTest
     public void maximalSubsum2()
     {
         // given
-        List<Double> sequence = Arrays.asList(-9.3, -1.2, 3.5, 4.8, -10.6, 7.7, 2.1, 0.8, 4.0);
+        List<Double> sequence = List.of(-9.3, -1.2, 3.5, 4.8, -10.6, 7.7, 2.1, 0.8, 4.0);
         // when
         double result = Subsequences.maximalSubsum(sequence);
         // then
@@ -65,13 +130,15 @@ public class SubsequencesTest
     }
 
     @Test
-    public void maximumalSubsum_WhenAllElementsAreNegative()
+    public void maximumalSubsum_WhenAllElementsAreNegative_ThenZero()
     {
         // given
-        List<Double> sequence = Arrays.asList(-9.0, -2.4, -3.07, -1.93, -12.67);
+        List<Double> sequence = List.of(-9.0, -2.4, -3.07, -1.93, -12.67);
         // when
         double result = Subsequences.maximalSubsum(sequence);
         // then
         Assertions.assertThat(result).isEqualTo(0.0);
     }
+
+    // endregion
 }
